css/main.css
/* ... */
@media screen and (max-width: 73.437em) {
  .section-title {
    margin: 0 auto 2rem auto;
  }

  .testimonials .section-title {
    text-align: center;
  }
  .all-services {
    flex-direction: column;
    row-gap: 5rem;
    margin-top: 8rem;
  }

  .service-img {
    width: 50rem;
    height: auto;
    object-fit: cover;
  }

  .track-progress-img {
    height: 56rem;
  }

  .loc-desc-container {
    flex-direction: column;
    row-gap: 2rem;
  }
}

@media screen and (max-width: 67.5em) {
  .logo {
    width: 15rem;
  }
}

@media screen and (max-width: 66.875em) {
  .hero-content {
    column-gap: 3rem;
  }

  .turnkey-services {
    padding: 14.5rem 2.5rem 12.5rem 2.5rem;
  }

  .turnkey-services-content .turnkey-content:first-child .turnkey-img,
  .turnkey-services-content .turnkey-content:nth-child(2) .turnkey-img,
  .turnkey-services-content .turnkey-content:nth-child(3) .turnkey-img {
    background-size: contain;
    width: 10rem;
  }

  .turnkey-content-title {
    margin-top: 0;
  }

  .turnkey-services-content {
    margin-top: 3rem;
  }

  .custom-made-img {
    height: 60.7rem;
  }

  .telework-img {
    height: 44rem;
  }

  .setup-img {
    height: 45rem;
  }

  .no-coding-img {
    height: 40rem;
  }
  .track-progress-img {
    height: 35rem;
  }
  .setup .side-text {
    margin-right: 37rem;
    margin-top: 30rem;
  }
}

@media screen and (max-width: 65em) {
  .hero-section {
    background-image: url("../img/Home_Page/header/background/background-small.png");
    background-size: contain;
  }
}

@media screen and (max-width: 64.125em) {
  .hero-heading {
    font-size: 3rem;
    line-height: 1.3;
  }

  .service-section .section-title {
    margin: 0 auto;
  }

  .loc-desc-text-container {
    margin: 0 auto;
  }

  .office-img {
    height: 30rem;
  }
}

@media screen and (max-width: 62.5em) {
  .turnkey-services-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    row-gap: 2.5rem;
    /* column-gap: 20rem;
    margin-top: 5rem; */
  }

  .turnkey-services {
    /* padding: 12rem 2.5rem;
    background-size: cover; */
    height: auto;
  }

  .turnkey-services-content .turnkey-content:first-child .turnkey-img,
  .turnkey-services-content .turnkey-content:nth-child(2) .turnkey-img,
  .turnkey-services-content .turnkey-content:nth-child(3) .turnkey-img {
    background-size: contain;
    width: 13rem;
    /* height: 11.9rem; */
  }

  .turnkey-content-title {
    margin-top: 1rem;
  }

  .turnkey-services {
    background-image: none;
    border-radius: 100%;
    padding: 10rem 2.5rem;
    background-color: rgb(4, 100, 184);
  }

  .turnkey-services .section-title {
    text-align: center;
    max-width: 70%;
    margin: 1rem auto;
    line-height: 1.5;
  }

  .turnkey-services .sub-section-title {
    max-width: 70%;
    margin: 1rem auto;
    line-height: 1.5;
  }
}

@media screen and (max-width: 60em) {
  .hero-content {
    flex-direction: column-reverse;
  }

  .hero-text-container {
    /* flex-basis: 20rem; */
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .custom-made-img {
    height: 50rem;
  }

  .telework-img {
    height: 40rem;
  }

  .setup-img {
    height: 40rem;
  }

  .no-coding-img {
    height: 35rem;
  }

  .track-progress-img {
    height: 30rem;
  }

  .service-section .section-title {
    margin: 10rem auto 8rem auto;
  }

  .setup .side-text {
    display: none;
  }

  .map-container {
    .office-img {
      display: none;
    }
  }

  .map-container {
    align-items: center;
  }
}

@media screen and (max-width: 55.187em) {
  .logo {
    width: 13rem;
  }

  .map-container {
    flex-direction: column-reverse;
    row-gap: 2rem;
    align-items: center;
  }
}

@media screen and (max-width: 51.5em) {
  .turnkey-services-content {
    column-gap: 10rem;
  }
  .custom-made-img {
    height: 40rem;
  }

  .telework-img {
    height: 30rem;
  }

  .setup-img {
    height: 35rem;
  }

  .no-coding-img {
    height: 30rem;
  }

  .track-progress-img {
    height: 28rem;
  }

  .custom-made {
    margin-top: 5rem;
  }
}

@media screen and (max-width: 49.875em) {
  .hero-section {
    background-image: linear-gradient(
      to bottom,
      rgb(4, 100, 184) 10%,
      rgba(0, 0, 0, 0) 10%
    );
  }

  .carousel-item {
    flex-direction: column;
  }

  .testimonials-content ol {
    margin-top: 55rem;
  }
}

@media screen and (max-width: 41.5em) {
  .support-section-content {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    row-gap: 5rem;
  }

  .support-section .section-title {
    text-align: center;
  }
}
/* ... */

